--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Alpha Movie</string>
+    <string name="change_bg">Change background</string>
     <string name="shader_custom">#extension GL_OES_EGL_image_external : require\n
             precision mediump float;
             varying vec2 vTextureCoord;
