--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
             varying mediump float text_alpha_out;
             void main() {
               vec4 color = texture2D(sTexture, vTextureCoord);
-              if (color.b - color.r >= 0.1 &amp;&amp; color.b - color.g >= 0.1) {
-                  gl_FragColor = vec4(color.r, color.g, (color.r + color.g) / 2.0, 1.0 - color.b);
+              if (color.g - color.r >= 0.1 &amp;&amp; color.g - color.b >= 0.1) {
+                  gl_FragColor = vec4(color.r, (color.r + color.b) / 2.0, color.b, 1.0 - color.g);
               } else {
                   gl_FragColor = vec4(color.r, color.g, color.b, color.a);
               }
